--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,22 @@
+certifi==2020.4.5.1
+cffi==1.14.0
+chardet==3.0.4
+cryptography==2.9.2
+defusedxml==0.7.0rc1
 Django==2.2.10
+idna==2.9
 MainApp==0.1
+oauthlib==3.1.0
 Pillow==7.0.0
 pkg-resources==0.0.0
+pycparser==2.20
+PyJWT==1.7.1
+python3-openid==3.1.0
 pytz==2019.2
+requests==2.23.0
+requests-oauthlib==1.3.0
+six==1.14.0
+social-auth-app-django==3.1.0
+social-auth-core==3.3.3
 sqlparse==0.3.0
+urllib3==1.25.9
