--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,13 @@ chardet==3.0.4
 cryptography==2.9.2
 defusedxml==0.7.0rc1
 Django==2.2.10
+gunicorn==20.0.4
 idna==2.9
 MainApp==0.1
 oauthlib==3.1.0
 Pillow==7.0.0
 pkg-resources==0.0.0
+psycopg2==2.8.5
 pycparser==2.20
 PyJWT==1.7.1
 python3-openid==3.1.0
