--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ chardet==3.0.4
 cryptography==2.9.2
 defusedxml==0.7.0rc1
 Django==2.2.10
+django-debug-toolbar==2.2
+django-debug-toolbar-template-profiler==2.0.1
 gunicorn==20.0.4
 idna==2.9
 MainApp==0.1
@@ -22,3 +24,4 @@ social-auth-app-django==3.1.0
 social-auth-core==3.3.3
 sqlparse==0.3.0
 urllib3==1.25.9
+wrapt==1.12.1
