--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ defusedxml==0.7.0rc1
 Django==2.2.10
 django-debug-toolbar==2.2
 django-debug-toolbar-template-profiler==2.0.1
+django-extensions==2.2.9
 gunicorn==20.0.4
 idna==2.9
 MainApp==0.1
@@ -14,7 +15,9 @@ Pillow==7.0.0
 pkg-resources==0.0.0
 psycopg2==2.8.5
 pycparser==2.20
+pydotplus==2.0.2
 PyJWT==1.7.1
+pyparsing==2.4.7
 python3-openid==3.1.0
 pytz==2019.2
 requests==2.23.0
