--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ pycparser==2.20
 pydotplus==2.0.2
 PyJWT==1.7.1
 pyparsing==2.4.7
+python-memcached==1.59
 python3-openid==3.1.0
 pytz==2019.2
 requests==2.23.0
